--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="lunch">Mittag</string>
     <string name="customer_name_number">%1$s (%2$s)</string>
     <string name="menu_fragment_title">Speiseplan\n%1$s</string>
+    <string name="menu_confirmation_fragment_title">Bestelländerungen</string>
     <string name="username_password_error">Ihre Anmeldung ist fehlgeschlagen. Prüfen Sie Kundennummer und Passwort?</string>
     <string name="username_required_error">Ihre Kundennummer wird benötigt.</string>
     <string name="password_required_error">Ihr Passwort wird benötigt.</string>
@@ -21,7 +22,8 @@
         <item quantity="other">%1$d Menüs</item>
     </plurals>
     <string name="action_menu_change">Ändern</string>
-    <string name="menu_name_and_price">%s (%s)</string>
+    <string name="action_buy">Bestellen</string>
+    <string name="menu_name_and_price">%s</string>
 
     <array name="weekdays">
         <item>Montag</item>
