--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,9 @@
     <string name="password_required_error">Ihr Passwort wird benötigt.</string>
     <string name="unknown_error">Ein Fehler ist aufgetreten</string>
     <string name="no_secure_lock_error">Secure Lock Einstellungen fehlen. \'Einstellungen\' -> \'Sicherheit\' -> \'Screen Lock\'</string>
-    <string name="no_network_connection_error">Sie haben keine Internetverbindung.</string>
+    <string name="no_network_connection_error">Keine Internetverbindung.</string>
     <string name="decryption_canceled_error">Sie müssen sich authentifizieren damit wir Ihr Passwort entschlüsseln können.</string>
-    <string name="save_credentials">Kundendaten speichern?\n(Ihr Passwort wird dabei verschlüsselt)</string>
+    <string name="save_credentials">Kundendaten verschlüsselt speichern?</string>
     <string name="profile_section">Gespeicherte Kundendaten</string>
     <plurals name="changed_orders">
         <item quantity="one">%1$d Menü</item>
@@ -24,6 +24,12 @@
     <string name="action_menu_change">Ändern</string>
     <string name="action_buy">Bestellen</string>
     <string name="menu_name_and_price">%s</string>
+
+    <string name="roboto_regular">sans-serif</string>
+    <string name="roboto_light">sans-serif-light</string>
+    <string name="roboto_condensed">sans-serif-condensed</string>
+    <string name="roboto_thin">sans-serif-thin</string>
+    <string name="roboto_medium">sans-serif-medium</string>
 
     <array name="weekdays">
         <item>Montag</item>
