--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="username_required_error">Ihre Kundennummer wird benötigt.</string>
     <string name="password_required_error">Ihr Passwort wird benötigt.</string>
     <string name="unknown_error">Ein Fehler ist aufgetreten</string>
-    <string name="no_secure_lock_error">Secure Lock Einstellungen fehlen. \'Einstellungen\' -> \'Sicherheit\' -> \'Screen Lock\'</string>
+    <string name="no_secure_lock_error">Sie müssen Ihr Gerät mit einem PIN, Passwort oder Muster für diese Option sichern.</string>
     <string name="no_network_connection_error">Sie brauchen eine Internetverbindung.</string>
     <string name="decryption_canceled_error">Sie müssen sich authentifizieren damit wir Ihr Passwort entschlüsseln können.</string>
     <string name="save_credentials">Kundendaten verschlüsselt speichern?</string>
